target/generated-sources/antlr4/JS2JAVAParser.java
// Generated from JS2JAVAParser.g4 by ANTLR 4.5.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JS2JAVAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPENPAR=1, CLOSEPAR=2, OPENBRACES=3, CLOSEBRACES=4, OPENBRACKETS=5, CLOSEBRACKETS=6, 
		TWOPOINTS=7, COMMA=8, TRUE=9, FALSE=10, NULL=11, TYPE=12, VARDEC=13, FUNCDEC=14, 
		VARDECTOR=15, BLOCKSTMT=16, FORSTMT=17, FORINSTMT=18, IFSTMT=19, EXPSTMT=20, 
		WHILESTMT=21, DOWHILESTMT=22, IDENTIFIER=23, LITERAL=24, BINARYEX=25, 
		UPDATEEX=26, ASSIGNEX=27, UNARYEX=28, ARRAYEX=29, CALLEX=30, EXPRESSION=31, 
		ID=32, INIT=33, OPERATOR=34, LEFT=35, RIGHT=36, VALUE=37, NAME=38, RAW=39, 
		KIND=40, EACH=41, ELEMENTS=42, VAR=43, UPDATE=44, ARGUMENT=45, ARGUMENTS=46, 
		DECLARATIONS=47, PARAMS=48, DEFAULTS=49, PREFIX=50, GENERATOR=51, CALLEE=52, 
		TEST=53, CONSEQUENT=54, ALTERNATE=55, SOURCETYPE=56, BODY=57, PROGRAM=58, 
		SCRIPT=59, ADD=60, SUB=61, MUL=62, DIV=63, REM=64, EQUAL=65, NEQUAL=66, 
		SMALLER=67, SMALLEREQ=68, BIGGER=69, BIGGEREQ=70, INC=71, DEC=72, NOT=73, 
		ASSIGN=74, ADDASSIGN=75, SUBASSIGN=76, MULASSIGN=77, DIVASSIGN=78, STRING=79, 
		NUMBER=80, WS=81;
	public static final int
		RULE_json = 0, RULE_obj = 1, RULE_vardecobj = 2, RULE_funcdecobj = 3, 
		RULE_declarations = 4, RULE_variableDeclarator = 5, RULE_params = 6, RULE_defaults = 7, 
		RULE_init_for = 8, RULE_forstmt = 9, RULE_forinstmt = 10, RULE_whilestmt = 11, 
		RULE_dowhilestmt = 12, RULE_blockstmt = 13, RULE_ifstmt = 14, RULE_expstmt = 15, 
		RULE_init = 16, RULE_literal = 17, RULE_binaryex = 18, RULE_updateex = 19, 
		RULE_assignex = 20, RULE_unaryex = 21, RULE_arrayex = 22, RULE_callex = 23, 
		RULE_expression = 24, RULE_id = 25, RULE_id2 = 26;
	public static final String[] ruleNames = {
		"json", "obj", "vardecobj", "funcdecobj", "declarations", "variableDeclarator", 
		"params", "defaults", "init_for", "forstmt", "forinstmt", "whilestmt", 
		"dowhilestmt", "blockstmt", "ifstmt", "expstmt", "init", "literal", "binaryex", 
		"updateex", "assignex", "unaryex", "arrayex", "callex", "expression", 
		"id", "id2"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "','", "'true'", 
		"'false'", "'null'", "'\"type\"'", "'\"VariableDeclaration\"'", "'\"FunctionDeclaration\"'", 
		"'\"VariableDeclarator\"'", "'\"BlockStatement\"'", "'\"ForStatement\"'", 
		"'\"ForInStatement\"'", "'\"IfStatement\"'", "'\"ExpressionStatement\"'", 
		"'\"WhileStatement\"'", "'\"DoWhileStatement\"'", "'\"Identifier\"'", 
		"'\"Literal\"'", "'\"BinaryExpression\"'", "'\"UpdateExpression\"'", "'\"AssignmentExpression\"'", 
		"'\"UnaryExpression\"'", "'\"ArrayExpression\"'", "'\"CallExpression\"'", 
		"'\"expression\"'", "'\"id\"'", "'\"init\"'", "'\"operator\"'", "'\"left\"'", 
		"'\"right\"'", "'\"value\"'", "'\"name\"'", "'\"raw\"'", "'\"kind\"'", 
		"'\"each\"'", "'\"elements\"'", "'\"var\"'", "'\"update\"'", "'\"argument\"'", 
		"'\"arguments\"'", "'\"declarations\"'", "'\"params\"'", "'\"defaults\"'", 
		"'\"prefix\"'", "'\"generator\"'", "'\"callee\"'", "'\"test\"'", "'\"consequent\"'", 
		"'\"alternate\"'", "'\"sourceType\"'", "'\"body\"'", "'\"Program\"'", 
		"'\"script\"'", "'\"+\"'", "'\"-\"'", "'\"*\"'", "'\"/\"'", "'\"%\"'", 
		"'\"==\"'", "'\"!=\"'", "'\"<\"'", "'\"<=\"'", "'\">\"'", "'\">=\"'", 
		"'\"++\"'", "'\"--\"'", "'\"!\"'", "'\"=\"'", "'\"+=\"'", "'\"-=\"'", 
		"'\"*=\"'", "'\"/=\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OPENPAR", "CLOSEPAR", "OPENBRACES", "CLOSEBRACES", "OPENBRACKETS", 
		"CLOSEBRACKETS", "TWOPOINTS", "COMMA", "TRUE", "FALSE", "NULL", "TYPE", 
		"VARDEC", "FUNCDEC", "VARDECTOR", "BLOCKSTMT", "FORSTMT", "FORINSTMT", 
		"IFSTMT", "EXPSTMT", "WHILESTMT", "DOWHILESTMT", "IDENTIFIER", "LITERAL", 
		"BINARYEX", "UPDATEEX", "ASSIGNEX", "UNARYEX", "ARRAYEX", "CALLEX", "EXPRESSION", 
		"ID", "INIT", "OPERATOR", "LEFT", "RIGHT", "VALUE", "NAME", "RAW", "KIND", 
		"EACH", "ELEMENTS", "VAR", "UPDATE", "ARGUMENT", "ARGUMENTS", "DECLARATIONS", 
		"PARAMS", "DEFAULTS", "PREFIX", "GENERATOR", "CALLEE", "TEST", "CONSEQUENT", 
		"ALTERNATE", "SOURCETYPE", "BODY", "PROGRAM", "SCRIPT", "ADD", "SUB", 
		"MUL", "DIV", "REM", "EQUAL", "NEQUAL", "SMALLER", "SMALLEREQ", "BIGGER", 
		"BIGGEREQ", "INC", "DEC", "NOT", "ASSIGN", "ADDASSIGN", "SUBASSIGN", "MULASSIGN", 
		"DIVASSIGN", "STRING", "NUMBER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JS2JAVAParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JS2JAVAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class JsonContext extends ParserRuleContext {
		public TerminalNode OPENBRACES() { return getToken(JS2JAVAParser.OPENBRACES, 0); }
		public TerminalNode TYPE() { return getToken(JS2JAVAParser.TYPE, 0); }
		public List<TerminalNode> TWOPOINTS() { return getTokens(JS2JAVAParser.TWOPOINTS); }
		public TerminalNode TWOPOINTS(int i) {
			return getToken(JS2JAVAParser.TWOPOINTS, i);
		}
		public TerminalNode PROGRAM() { return getToken(JS2JAVAParser.PROGRAM, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JS2JAVAParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JS2JAVAParser.COMMA, i);
		}
		public TerminalNode BODY() { return getToken(JS2JAVAParser.BODY, 0); }
		public TerminalNode OPENBRACKETS() { return getToken(JS2JAVAParser.OPENBRACKETS, 0); }
		public TerminalNode CLOSEBRACKETS() { return getToken(JS2JAVAParser.CLOSEBRACKETS, 0); }
		public TerminalNode SOURCETYPE() { return getToken(JS2JAVAParser.SOURCETYPE, 0); }
		public TerminalNode SCRIPT() { return getToken(JS2JAVAParser.SCRIPT, 0); }
		public List<ObjContext> obj() {
			return getRuleContexts(ObjContext.class);
		}
		public ObjContext obj(int i) {
			return getRuleContext(ObjContext.class,i);
		}
		public JsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_json; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).enterJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).exitJson(this);
		}
	}

	public final JsonContext json() throws RecognitionException {
		JsonContext _localctx = new JsonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_json);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(OPENBRACES);
			setState(55);
			match(TYPE);
			setState(56);
			match(TWOPOINTS);
			setState(57);
			match(PROGRAM);
			setState(58);
			match(COMMA);
			setState(59);
			match(BODY);
			setState(60);
			match(TWOPOINTS);
			setState(61);
			match(OPENBRACKETS);
			setState(70);
			_la = _input.LA(1);
			if (_la==OPENBRACES) {
				{
				setState(62);
				obj();
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(63);
					match(COMMA);
					setState(64);
					obj();
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(72);
			match(CLOSEBRACKETS);
			setState(73);
			match(COMMA);
			setState(74);
			match(SOURCETYPE);
			setState(75);
			match(TWOPOINTS);
			setState(76);
			match(SCRIPT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjContext extends ParserRuleContext {
		public VardecobjContext vardecobj() {
			return getRuleContext(VardecobjContext.class,0);
		}
		public FuncdecobjContext funcdecobj() {
			return getRuleContext(FuncdecobjContext.class,0);
		}
		public ForstmtContext forstmt() {
			return getRuleContext(ForstmtContext.class,0);
		}
		public ForinstmtContext forinstmt() {
			return getRuleContext(ForinstmtContext.class,0);
		}
		public WhilestmtContext whilestmt() {
			return getRuleContext(WhilestmtContext.class,0);
		}
		public DowhilestmtContext dowhilestmt() {
			return getRuleContext(DowhilestmtContext.class,0);
		}
		public BlockstmtContext blockstmt() {
			return getRuleContext(BlockstmtContext.class,0);
		}
		public IfstmtContext ifstmt() {
			return getRuleContext(IfstmtContext.class,0);
		}
		public ExpstmtContext expstmt() {
			return getRuleContext(ExpstmtContext.class,0);
		}
		public ObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).enterObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).exitObj(this);
		}
	}

	public final ObjContext obj() throws RecognitionException {
		ObjContext _localctx = new ObjContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_obj);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				vardecobj();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				funcdecobj();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				forstmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				forinstmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				whilestmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				dowhilestmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(84);
				blockstmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(85);
				ifstmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(86);
				expstmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecobjContext extends ParserRuleContext {
		public TerminalNode OPENBRACES() { return getToken(JS2JAVAParser.OPENBRACES, 0); }
		public TerminalNode TYPE() { return getToken(JS2JAVAParser.TYPE, 0); }
		public List<TerminalNode> TWOPOINTS() { return getTokens(JS2JAVAParser.TWOPOINTS); }
		public TerminalNode TWOPOINTS(int i) {
			return getToken(JS2JAVAParser.TWOPOINTS, i);
		}
		public TerminalNode VARDEC() { return getToken(JS2JAVAParser.VARDEC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JS2JAVAParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JS2JAVAParser.COMMA, i);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode KIND() { return getToken(JS2JAVAParser.KIND, 0); }
		public TerminalNode VAR() { return getToken(JS2JAVAParser.VAR, 0); }
		public TerminalNode CLOSEBRACES() { return getToken(JS2JAVAParser.CLOSEBRACES, 0); }
		public VardecobjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecobj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).enterVardecobj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).exitVardecobj(this);
		}
	}

	public final VardecobjContext vardecobj() throws RecognitionException {
		VardecobjContext _localctx = new VardecobjContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vardecobj);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(OPENBRACES);
			setState(90);
			match(TYPE);
			setState(91);
			match(TWOPOINTS);
			setState(92);
			match(VARDEC);
			setState(93);
			match(COMMA);
			setState(94);
			declarations();
			setState(95);
			match(COMMA);
			setState(96);
			match(KIND);
			setState(97);
			match(TWOPOINTS);
			setState(98);
			match(VAR);
			setState(99);
			match(CLOSEBRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdecobjContext extends ParserRuleContext {
		public TerminalNode OPENBRACES() { return getToken(JS2JAVAParser.OPENBRACES, 0); }
		public TerminalNode TYPE() { return getToken(JS2JAVAParser.TYPE, 0); }
		public List<TerminalNode> TWOPOINTS() { return getTokens(JS2JAVAParser.TWOPOINTS); }
		public TerminalNode TWOPOINTS(int i) {
			return getToken(JS2JAVAParser.TWOPOINTS, i);
		}
		public TerminalNode FUNCDEC() { return getToken(JS2JAVAParser.FUNCDEC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JS2JAVAParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JS2JAVAParser.COMMA, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public DefaultsContext defaults() {
			return getRuleContext(DefaultsContext.class,0);
		}
		public TerminalNode BODY() { return getToken(JS2JAVAParser.BODY, 0); }
		public BlockstmtContext blockstmt() {
			return getRuleContext(BlockstmtContext.class,0);
		}
		public TerminalNode GENERATOR() { return getToken(JS2JAVAParser.GENERATOR, 0); }
		public TerminalNode EXPRESSION() { return getToken(JS2JAVAParser.EXPRESSION, 0); }
		public TerminalNode CLOSEBRACES() { return getToken(JS2JAVAParser.CLOSEBRACES, 0); }
		public List<TerminalNode> TRUE() { return getTokens(JS2JAVAParser.TRUE); }
		public TerminalNode TRUE(int i) {
			return getToken(JS2JAVAParser.TRUE, i);
		}
		public List<TerminalNode> FALSE() { return getTokens(JS2JAVAParser.FALSE); }
		public TerminalNode FALSE(int i) {
			return getToken(JS2JAVAParser.FALSE, i);
		}
		public FuncdecobjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdecobj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).enterFuncdecobj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).exitFuncdecobj(this);
		}
	}

	public final FuncdecobjContext funcdecobj() throws RecognitionException {
		FuncdecobjContext _localctx = new FuncdecobjContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcdecobj);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(OPENBRACES);
			setState(102);
			match(TYPE);
			setState(103);
			match(TWOPOINTS);
			setState(104);
			match(FUNCDEC);
			setState(105);
			match(COMMA);
			setState(106);
			id();
			setState(107);
			match(COMMA);
			setState(108);
			params();
			setState(109);
			match(COMMA);
			setState(110);
			defaults();
			setState(111);
			match(COMMA);
			setState(112);
			match(BODY);
			setState(113);
			match(TWOPOINTS);
			setState(114);
			blockstmt();
			setState(115);
			match(COMMA);
			setState(116);
			match(GENERATOR);
			setState(117);
			match(TWOPOINTS);
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(119);
			match(COMMA);
			setState(120);
			match(EXPRESSION);
			setState(121);
			match(TWOPOINTS);
			setState(122);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(123);
			match(CLOSEBRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public TerminalNode DECLARATIONS() { return getToken(JS2JAVAParser.DECLARATIONS, 0); }
		public TerminalNode TWOPOINTS() { return getToken(JS2JAVAParser.TWOPOINTS, 0); }
		public TerminalNode OPENBRACKETS() { return getToken(JS2JAVAParser.OPENBRACKETS, 0); }
		public TerminalNode OPENBRACES() { return getToken(JS2JAVAParser.OPENBRACES, 0); }
		public VariableDeclaratorContext variableDeclarator() {
			return getRuleContext(VariableDeclaratorContext.class,0);
		}
		public TerminalNode CLOSEBRACES() { return getToken(JS2JAVAParser.CLOSEBRACES, 0); }
		public TerminalNode CLOSEBRACKETS() { return getToken(JS2JAVAParser.CLOSEBRACKETS, 0); }
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(DECLARATIONS);
			setState(126);
			match(TWOPOINTS);
			setState(127);
			match(OPENBRACKETS);
			setState(128);
			match(OPENBRACES);
			setState(129);
			variableDeclarator();
			setState(130);
			match(CLOSEBRACES);
			setState(131);
			match(CLOSEBRACKETS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(JS2JAVAParser.TYPE, 0); }
		public TerminalNode TWOPOINTS() { return getToken(JS2JAVAParser.TWOPOINTS, 0); }
		public TerminalNode VARDECTOR() { return getToken(JS2JAVAParser.VARDECTOR, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JS2JAVAParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JS2JAVAParser.COMMA, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).enterVariableDeclarator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).exitVariableDeclarator(this);
		}
	}

	public final VariableDeclaratorContext variableDeclarator() throws RecognitionException {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclarator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(TYPE);
			setState(134);
			match(TWOPOINTS);
			setState(135);
			match(VARDECTOR);
			setState(136);
			match(COMMA);
			setState(137);
			id();
			setState(138);
			match(COMMA);
			setState(139);
			init();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public TerminalNode PARAMS() { return getToken(JS2JAVAParser.PARAMS, 0); }
		public TerminalNode TWOPOINTS() { return getToken(JS2JAVAParser.TWOPOINTS, 0); }
		public TerminalNode OPENBRACKETS() { return getToken(JS2JAVAParser.OPENBRACKETS, 0); }
		public TerminalNode CLOSEBRACKETS() { return getToken(JS2JAVAParser.CLOSEBRACKETS, 0); }
		public List<Id2Context> id2() {
			return getRuleContexts(Id2Context.class);
		}
		public Id2Context id2(int i) {
			return getRuleContext(Id2Context.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JS2JAVAParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JS2JAVAParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JS2JAVAParserListener ) ((JS2JAVAParserListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(PARAMS);
			setState(142);
			match(TWOPOINTS);
			setState(143);
			match(OPENBRACKETS);
			setState(152);
			_la = _input.LA(1);
			if (_la==OPENBRACES) {
				{
				setState(144);
				id2();
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(145);
					match(COMMA);
					setState(146);
					id2();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(154);
			match(CLOSEBRACKETS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
